--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,6 @@
 @import "{{ site.theme }}";
 
 table {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
 }
